// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PreviewGrid render PreviewGrid loading 1`] = `
<div>
  <div
    class="preview-grid"
  >
    <span
      class=""
    >
      <i
        aria-hidden="true"
        class="fa fa-spinner fa-pulse"
      />
       
      Loading...
    </span>
  </div>
</div>
`;

exports[`PreviewGrid render PreviewGrid with data 1`] = `
<div>
  <div
    class="preview-grid"
  >
    <p>
      Previewing first 3 rows and 4 of 5 columns.
    </p>
    <div
      class="table-responsive"
    >
      <div
        class="grid-messages"
      />
      <table
        class="read-only-table table table-striped table-bordered"
      >
        <thead>
          <tr>
            <th
              class="grid-header-cell"
              data-fieldkey="Name"
              draggable="false"
              id="Name"
              title="Contains a short name for this data object
If not provided, a unique name will be generated from the expression:
null (Name)"
            >
              <div
                class="grid-header-cell__body"
              >
                Name
              </div>
            </th>
            <th
              class="grid-header-cell"
              data-fieldkey="Flag"
              draggable="false"
              id="Flag"
              title="Contains a reference to a user-editable comment about this row (Flag)"
            >
              <div
                class="grid-header-cell__body"
              >
                Flag
              </div>
            </th>
            <th
              class="grid-header-cell"
              data-fieldkey="mixtureTypeId"
              draggable="false"
              id="mixtureTypeId"
              title="mixtureTypeId"
            >
              <div
                class="grid-header-cell__body"
              >
                Mixture Type
              </div>
            </th>
            <th
              class="grid-header-cell"
              data-fieldkey="expirationTime"
              draggable="false"
              id="expirationTime"
              title="The expiration period in days. (expirationTime)"
            >
              <div
                class="grid-header-cell__body"
              >
                Expiration Time
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="grid-row-alternate"
          >
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              >
                <a
                  href="/labkey/testContainer/experiment-showData.view?rowId=41426"
                >
                  DMEXP
                </a>
              </div>
            </td>
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              />
            </td>
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              >
                <a
                  href="/labkey/testContainer/list-details.view?listId=15&pk=2"
                >
                  Solution
                </a>
              </div>
            </td>
            <td
              class="text-right"
            >
              <div
                class="table-cell-content"
              >
                30
              </div>
            </td>
          </tr>
          <tr
            class="grid-row"
          >
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              >
                <a
                  href="/labkey/testContainer/experiment-showData.view?rowId=41425"
                >
                  TBS
                </a>
              </div>
            </td>
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              />
            </td>
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              >
                <a
                  href="/labkey/testContainer/list-details.view?listId=15&pk=2"
                >
                  Solution
                </a>
              </div>
            </td>
            <td
              class="text-right"
            >
              <div
                class="table-cell-content"
              >
                30
              </div>
            </td>
          </tr>
          <tr
            class="grid-row-alternate"
          >
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              >
                <a
                  href="/labkey/testContainer/experiment-showData.view?rowId=41424"
                >
                  PBS
                </a>
              </div>
            </td>
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              />
            </td>
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              >
                <a
                  href="/labkey/testContainer/list-details.view?listId=15&pk=2"
                >
                  Solution
                </a>
              </div>
            </td>
            <td
              class="text-right"
            >
              <div
                class="table-cell-content"
              >
                30
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`PreviewGrid render PreviewGrid with different numCols and numRows 1`] = `
<div>
  <div
    class="preview-grid"
  >
    <p>
      Previewing first 2 rows and 2 of 5 columns.
    </p>
    <div
      class="table-responsive"
    >
      <div
        class="grid-messages"
      />
      <table
        class="read-only-table table table-striped table-bordered"
      >
        <thead>
          <tr>
            <th
              class="grid-header-cell"
              data-fieldkey="Name"
              draggable="false"
              id="Name"
              title="Contains a short name for this data object
If not provided, a unique name will be generated from the expression:
null (Name)"
            >
              <div
                class="grid-header-cell__body"
              >
                Name
              </div>
            </th>
            <th
              class="grid-header-cell"
              data-fieldkey="Flag"
              draggable="false"
              id="Flag"
              title="Contains a reference to a user-editable comment about this row (Flag)"
            >
              <div
                class="grid-header-cell__body"
              >
                Flag
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="grid-row-alternate"
          >
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              >
                <a
                  href="/labkey/testContainer/experiment-showData.view?rowId=41426"
                >
                  DMEXP
                </a>
              </div>
            </td>
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              />
            </td>
          </tr>
          <tr
            class="grid-row"
          >
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              >
                <a
                  href="/labkey/testContainer/experiment-showData.view?rowId=41425"
                >
                  TBS
                </a>
              </div>
            </td>
            <td
              class="text-left"
            >
              <div
                class="table-cell-content"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
